--- a/requirements.txt
+++ b/requirements.txt
@@ -1,50 +1,175 @@
-asttokens==2.4.1
+alembic==1.12.1
+altair==4.2.2
+anyio==3.6.2
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+arrow==1.2.3
+asttokens==2.2.1
+async-lru==2.0.4
+attrs==22.2.0
+Babel==2.13.1
+backcall==0.2.0
+beautifulsoup4==4.11.2
+bleach==6.0.0
+blinker==1.5
+branca==0.7.0
+cachetools==5.3.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+click==8.1.3
+cloudpickle==3.0.0
 colorama==0.4.6
-comm==0.2.2
-contourpy==1.3.0
-cycler==0.12.1
-debugpy==1.8.5
+colorlog==6.7.0
+comm==0.1.2
+contourpy==1.1.1
+cycler==0.11.0
+debugpy==1.6.6
 decorator==5.1.1
-et-xmlfile==1.1.0
-exceptiongroup==1.2.2
-executing==2.1.0
-fonttools==4.53.1
-ipykernel==6.29.5
-ipython==8.27.0
-jedi==0.19.1
-joblib==1.4.2
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-kiwisolver==1.4.7
-matplotlib==3.9.2
-matplotlib-inline==0.1.7
-nest-asyncio==1.6.0
-numpy==2.1.1
-openpyxl==3.1.5
-packaging==24.1
-pandas==2.2.3
-parso==0.8.4
+defusedxml==0.7.1
+entrypoints==0.4
+exceptiongroup==1.2.0
+executing==1.2.0
+fastjsonschema==2.16.3
+flake8==6.1.0
+folium==0.15.0
+fonttools==4.42.1
+fqdn==1.5.1
+gitdb==4.0.10
+GitPython==3.1.31
+greenlet==3.0.1
+gym==0.26.2
+gym-notices==0.0.8
+holidays==0.35
+idna==3.4
+importlib-metadata==6.1.0
+iniconfig==2.0.0
+ipykernel==6.21.2
+ipython==8.18.1
+ipython-genutils==0.2.0
+ipywidgets==8.0.4
+isoduration==20.11.0
+jedi==0.18.2
+Jinja2==3.1.2
+joblib==1.3.2
+json5==0.9.14
+jsonpointer==2.3
+jsonschema==4.20.0
+jsonschema-specifications==2023.11.2
+jupyter==1.0.0
+jupyter-console==6.6.3
+jupyter-events==0.9.0
+jupyter-lsp==2.2.1
+jupyter_client==8.0.3
+jupyter_core==5.2.0
+jupyter_server==2.11.1
+jupyter_server_terminals==0.4.4
+jupyterlab==4.0.9
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==3.0.5
+jupyterlab_server==2.25.2
+kiwisolver==1.4.5
+llvmlite==0.43.0
+Mako==1.3.0
+markdown-it-py==2.2.0
+MarkupSafe==2.1.2
+matplotlib==3.8.2
+matplotlib-inline==0.1.6
+mccabe==0.7.0
+mdurl==0.1.2
+mistune==2.0.5
+nbclassic==0.5.2
+nbclient==0.7.2
+nbconvert==7.2.9
+nbformat==5.7.3
+nest-asyncio==1.5.6
+notebook==6.5.2
+notebook_shim==0.2.2
+numba==0.60.0
+numpy==1.26.2
+optuna==3.4.0
+overrides==7.4.0
+packaging==23.0
+pandas==2.1.3
+pandocfilters==1.5.0
+parso==0.8.3
 patsy==0.5.6
-pillow==10.4.0
-platformdirs==4.3.6
-prompt_toolkit==3.0.47
-psutil==6.0.0
-pure_eval==0.2.3
-Pygments==2.18.0
-pyparsing==3.1.4
-python-dateutil==2.9.0.post0
-pytz==2024.2
-pywin32==306
-pyzmq==26.2.0
-scikit-learn==1.5.2
-scipy==1.14.1
-seaborn==0.13.2
+pickleshare==0.7.5
+Pillow==9.4.0
+platformdirs==3.1.0
+plotly==5.13.1
+pluggy==1.3.0
+prometheus-client==0.16.0
+prompt-toolkit==3.0.41
+protobuf==3.20.3
+psutil==5.9.4
+pure-eval==0.2.2
+pyarrow==14.0.1
+pycodestyle==2.11.1
+pycparser==2.21
+pydeck==0.8.0
+pydocstyle==6.3.0
+pyflakes==3.1.0
+pygame==2.1.2
+Pygments==2.14.0
+Pympler==1.0.1
+pyparsing==3.1.1
+pyrsistent==0.19.3
+pytest==7.4.3
+python-dateutil==2.8.2
+python-json-logger==2.0.7
+pytz==2022.7.1
+pytz-deprecation-shim==0.1.0.post0
+pywin32==305
+pywinpty==2.0.10
+PyYAML==6.0
+pyzmq==25.0.0
+qtconsole==5.4.1
+QtPy==2.3.0
+referencing==0.31.1
+requests==2.31.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==13.3.2
+rpds-py==0.13.2
+scikit-learn==1.3.2
+scipy==1.11.4
+seaborn==0.13.0
+semver==2.13.0
+Send2Trash==1.8.2
+shap==0.46.0
 six==1.16.0
-stack-data==0.6.3
+slicer==0.0.8
+smmap==5.0.0
+sniffio==1.3.0
+snowballstemmer==2.2.0
+soupsieve==2.4
+SQLAlchemy==2.0.23
+stack-data==0.6.2
 statsmodels==0.14.3
-threadpoolctl==3.5.0
-tornado==6.4.1
-traitlets==5.14.3
-typing_extensions==4.12.2
-tzdata==2024.1
-wcwidth==0.2.13
+streamlit==1.20.0
+tenacity==8.2.2
+terminado==0.17.1
+threadpoolctl==3.2.0
+tinycss2==1.2.1
+toml==0.10.2
+tomli==2.0.1
+toolz==0.12.0
+tornado==6.2
+tqdm==4.66.1
+traitlets==5.9.0
+typing_extensions==4.5.0
+tzdata==2022.7
+tzlocal==4.3
+uri-template==1.2.0
+urllib3==1.26.15
+validators==0.20.0
+watchdog==3.0.0
+wcwidth==0.2.6
+webcolors==1.12
+webencodings==0.5.1
+websocket-client==1.5.1
+widgetsnbextension==4.0.5
+xgboost==2.1.1
+XPER==0.0.88
+zipp==3.15.0
